--- a/build.gradle
+++ b/build.gradle
@@ -55,9 +55,9 @@ bootJar {
 
 sonarqube {
   properties {
-    property "sonar.projectKey", "TODO"
-    property "sonar.organization", "TODO"
-    property "sonar.host.url", "TODO"
+    property "sonar.projectKey", "sopra-fs23-group-05_Server"
+    property "sonar.organization", "sopra-fs23-group-05"
+    property "sonar.host.url", "https://sonarcloud.io/api/project_badges/measure?project=sopra-fs23-group-05_Server&metric=alert_status"
   }
 }
 
