--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ sonarqube {
   properties {
     property "sonar.projectKey", "sopra-fs23-group-05_Server"
     property "sonar.organization", "sopra-fs23-group-05"
-    property "sonar.host.url", "https://sonarcloud.io/api/project_badges/measure?project=sopra-fs23-group-05_Server&metric=alert_status"
+    property "sonar.host.url", "https://sonarcloud.io"
   }
 }
 
