--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,9 @@
 runtime: java
 env: flex
 
+automatic_scaling:
+  max_num_instances: 1
+
 runtime_config:
   operating_system: "ubuntu22"
   runtime_version: "17"
